2016-06-28  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at - Added Files with FILLER.

2016-06-26  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at - Added LISTING ON/OFF test.

2016-06-20  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at - Added new tests for compiler listings.
	* Makefile.in, Makefile.am - Added testsuite/listings.at.
	* testsuite.at - Added testsuite/listings.at

2016-06-15 Brian Tiffin <btiffin@gnu.org>

	* testsuite.src/used_binaries.at: added tests for -j"args"

2016-05-31  Brian Tiffin <btiffin@gnu.org>

	* testsuite.src/run_fundamental.at: Added ADD/SUBTRACT CORRESPONDING test

2016-05-22  Brian Tiffin <btiffin@gnu.org>

	* testsuite.src/run_extensions.at: changed CBL_OC_HOSTED errno test

2016-05-15  Brian Tiffin <btiffin@gnu.org>

	* testsuite.src/used_binaries.at: added tests for cobcrun -M <module>

2016-04-23  Brian Tiffin <btiffin@gnu.org>

	* testsuite.src/data_binary.at: added test for binary-double unsigned
	  compare when high bit set.

2016-02-01  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* testsuite.at, tests/syn_reportwriter.at: RW checks earlier skipped are
	  now only comments - will be added back in 2.1 with more and better checks

2016-01-12  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* Makefile.am: added targets "test" (running ANSI testsuite) and
	  "checkall" (running both GnuCOBOL and ANSI testsuite)

2015-12-23  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* general: remove -std=cobol2002 for compiling (effectively using default),
	  checked with cobol2014 where checking for standard behaviour,
	  used -cb_conf when checking single compiler configurations instead
	  of creating+using a test.conf or loading a completely different -std,
	  check stdout+stderr where missing, removed the ifdef for __INTEL_COMPILER
	  as this is included via libcob.h now
	* configuration.at: check for all standard configurations -std to
	  be usable
